# tibprice

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: main.rs  pricing.rs  shared_buffer.rs  tibberapi.rs  utils.rs
tools/: build_armv7.sh
