[package]
name = "tibprice"
version = "0.1.1"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
dotenvy = "0.15"
log = "0.4"
env_logger = "0.11"
rand = "0.9.1"
argfile = "0.2.1"


[dev-dependencies]
mockito = "1.2"

[features]
slow_tests = []

[profile.release]
opt-level = "z"   # Optimize for minimal binary size
debug = "none"
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 1
